--- a/src/Pages/Login/Animations/ShadowWrapper.css
+++ b/src/Pages/Login/Animations/ShadowWrapper.css
@@ -1,11 +1,20 @@
 
-@keyframes shake-shadow {
+/* @keyframes shake-shadow {
   0% { box-shadow: 0px 5px 5px cyan; }
   20% { box-shadow: 0px 0px 15px cyan; }
   40% { box-shadow: 0px 0px 25px cyan; }
   60% { box-shadow: 0px 0px 30px cyan; }
   80% { box-shadow: 0px 0px 20px cyan; }
   100% { box-shadow: 0px 5px 5px cyan; }
+} */
+
+@keyframes shake-shadow {
+  0% { filter: drop-shadow(0px 5px 5px cyan); }
+  20% { filter: drop-shadow(0px 0px 15px cyan); }
+  40% { filter: drop-shadow(0px 0px 25px cyan); }
+  60% { filter: drop-shadow(0px 0px 30px cyan); }
+  80% { filter: drop-shadow(0px 0px 20px cyan); }
+  100% { filter: drop-shadow(0px 5px 5px cyan); }
 }
 
 @keyframes flipX {  /*GREAT TO ANIMATE EXITS*/
@@ -33,6 +42,11 @@
 /* #separator-line{
     background: black;
 } */
+
+#image-container {
+  will-change: box-shadow;
+}
+
 
 #form-target{
     rotate: 0deg 0deg -40deg;
